# conflux

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Conflux_CONOPS_v5.md  Conflux_Family_Command_Hub_UI_Wireframe_Phase1.md  Conflux_Phase1_Message_Catalog.md  Conflux_Phase1_State_Transition_Table.md  Conflux_Phase1_Timer_Window_Definitions.md  Conflux_Technical_Specification_v5.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
conflux/: app_state.py  config.py  db.py  main.py  message_catalog.py  models.py  orchestrator.py  service.py  state_engine.py  tiles.py  timers.py  views.py
conflux/adapters/: aprs.py  aprsfi.py  base.py  simulator.py
conflux/api/: routes.py
conflux/hub/: app.js  index.html  styles.css
tests/: conftest.py  test_aprs.py  test_aprsfi.py  test_catalog.py  test_service_orchestration.py  test_state_engine.py  test_subject_profiles.py  test_tiles.py  test_track_view.py
