[project]
name = "conflux"
version = "0.1.0"
description = "Conflux — a standalone, local-first resilience and situational-awareness system (Phase 1)."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "pydantic>=2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["conflux", "conflux.api", "conflux.adapters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
